data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_3981.wast
;; 10. **Test Description**:    Manipulate table entries to point to invalid or malformed functions and use `call_indirect` to invoke them. Validate the handling of such scenarios and ensure no stack underflows or overflows occur.

(assert_invalid
  (module
    (type $sig-empty (func))
    (type $sig-mismatch (func (param i32)))
    (table 1 funcref)
    (elem (i32.const 0) $mismatch-func)
    (func $mismatch-func (type $sig-mismatch) (param i32))
    (func (type $sig-empty) (call_indirect (type 0) (i32.const 0)))
  )
  "type mismatch"
)